--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <title>Document</title>
 </head>
 <body>
-  
+
   <div>
-    <h2 id="author">640631102 PANNAWIT PANWONG</h2>
+    <h2 id="author">630610749 PONGSAKORN RATTANAPAN</h2>
     <h2 id="calculation"></h2>
     <button class="button" id="toggle">Show Calculation</button>
   </div>
-  
+
   <hr/>
 
   <p id="text">Hey, you're not permitted in there. It's restricted. You'll be deactivated for sure.. Don't call me a mindless philosopher, you overweight glob of grease! Now come out before somebody sees you. Secret mission? What plans? What are you talking about? I'm not getting in there! I'm going to regret this. There goes another one. Hold your fire. There are no life forms. It must have been short-circuited. That's funny, the damage doesn't look as bad from out here. Are you sure this things safe?
@@ -31,12 +31,12 @@
   <hr/>
 
   <div>
-    #Characters to search: 
+    #Characters to search:
     <input type="number" id="length" name="length" value=5>
-      
-    Text color: 
+
+    Text color:
     <input type="color" id="color" name="color" value="#FF0000">
-    
+
     <br/>
     <button id="search">Search</button>
     <button id="reset">Reset</button>
